--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tab-communicator",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Robin Goupil <rgoupil@therapixel.com>",
   "analyze": true,
   "license": "MIT",
@@ -21,5 +21,8 @@
     "communication",
     "communicator"
   ],
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "event-emitter": "0.3.5"
+  }
 }
