--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ Thumbs.db
 # NPM packages folder.
 node_modules/
 
-# Brunch output folder.
-public/
+# Dist folder.
+dist/
 
 # Cypress run folders
 cypress/screenshots/
