--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "tab-communicator",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Robin Goupil <rgoupil@therapixel.com>",
   "analyze": true,
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "src/index.js",
+  "types": "index.d.ts",
+  "scripts": {
+    "start": "webpack --watch --config webpack.dev.js",
+    "watch": "npm run start",
+    "build": "webpack --config webpack.prod.js",
+    "prepublishOnly": "npm run build"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Therapixel/tab-communicator"
@@ -21,8 +30,16 @@
     "communication",
     "communicator"
   ],
-  "main": "index.js",
   "dependencies": {
     "event-emitter": "0.3.5"
+  },
+  "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/preset-env": "7.1.6",
+    "babel-loader": "8.0.4",
+    "clean-webpack-plugin": "1.0.0",
+    "webpack": "4.26.0",
+    "webpack-cli": "3.1.2",
+    "webpack-merge": "4.1.4"
   }
 }
